--- a/genesys/genesys_roller.html
+++ b/genesys/genesys_roller.html
@@ -7,7 +7,8 @@
 				var diceValue = document.getElementById('diceroll').value; // Grab value
 				// Split dice pools up in (digit, die type) pairs. Example: (2, f), (1, b)
 				var pools = diceValue.split(' ');
-				//var dice = diceValue.replace(/\s+/g, '');
+				//pools = pools.replace(/\s+/g, '');
+				pools = pools.filter(function(str) {return /\S*/.test(str);});
 				var reBonus 			= /(\d+)b/ // Bonus dice
 				var reAbility 		= /(\d+)a/ // Ability dice
 				var reProficiency = /(\d+)y/ // Proficiency dice; y sound more distinct than p
@@ -42,17 +43,17 @@
 				for (var i=0; i < pools.length;i++) {
 					pool = pools[i];
 					if (reBonus.test(pool)) {
-						var number = pool[0]
+						var number = pool[0];
 						for (var x=0; x < number; x++) {
-							var roll = Math.floor(Math.random()*6)+1;
+							var roll = DieRoll(6);
 							totalSuccesses += resultBonus[roll][0];
 							totalAdvantages += resultBonus[roll][1];
 						}
 					}
 					else if (reAbility.test(pool)) {
-						var number = pool[0]
+						var number = pool[0];
 						for (var x=0; x < number; x++) {
-							var roll = Math.floor(Math.random()*8)+1;
+							var roll = DieRoll(8);
 							totalSuccesses += resultAbility[roll][0];
 							totalAdvantages += resultAbility[roll][1];
 						}
@@ -60,42 +61,41 @@
 					else if (reProficiency.test(pool)) {
 						var number = pool[0]
 						for (var x=0; x < number; x++) {
-							var roll = Math.floor(Math.random()*12)+1;
+							var roll = DieRoll(12);
 							totalSuccesses += resultProficiency[roll][0];
 							totalAdvantages += resultProficiency[roll][1];
 							totalTriumphs += resultProficiency[roll][2];
 						}
 					}
 					else if (reSetback.test(pool)) {
-						var number = pool[0]
-
+						var number = pool[0];
 						for (var x=0; x < number; x++) {
-							var roll = Math.floor(Math.random()*6)+1;
+							var roll = DieRoll(6);
 							totalSuccesses += resultSetBack[roll][0];
 							totalAdvantages += resultSetBack[roll][1];
 						}
 					}
 					else if (reDifficulty.test(pool)) {
-						var number = pool[0]
+						var number = pool[0];
 						for (var x=0; x < number; x++) {
-							var roll = Math.floor(Math.random()*8)+1;
+							var roll = DieRoll(8);
 							totalSuccesses += resultDifficulty[roll][0];
 							totalAdvantages += resultDifficulty[roll][1];
 						}
 					}
 					else if (reChallenge.test(pool)) {
-						var number = pool[0]
+						var number = pool[0];
 						for (var x=0; x < number; x++) {
-							var roll = Math.floor(Math.random()*12)+1;
+							var roll = DieRoll(12);
 							totalSuccesses += resultChallenge[roll][0];
 							totalAdvantages += resultChallenge[roll][1];
 							totalDispairs += resultChallenge[roll][2];
 						};
 					}
 					else if (reSpecial.test(pool)) {
-						var number = pool[0]
+						var number = pool[0];
 						for (var x=0; x < number; x++) {
-							var roll = Math.floor(Math.random()*12)+1;
+							var roll = DieRoll(12);
 							totalSpecial += resultSpecial[roll];
 						};
 					}
@@ -104,40 +104,59 @@
 						return;
 					};
 				};
+				var blank = 1
 				// Output the number of Successes or Failures
 				if (totalSuccesses > 0) {
 					rollText += totalSuccesses + " Successes ";
+					blank = 0;
 				}
-				else if (totalSuccesses < 0){
+				else if (totalSuccesses < 0) {
 					rollText += Math.abs(totalSuccesses) + " Failures ";
+					blank = 0;
 				}
 				// Output the number of Advantages or Threats
 				if (totalAdvantages > 0) {
 					rollText += totalAdvantages + " Advantages ";
+					blank = 0;
 				}
 				else if (totalAdvantages < 0) {
 					rollText += Math.abs(totalAdvantages) + " Threats ";
+					blank = 0;
 				}
-				// Output the number of Triumphs and Dispairs
+				// Output the number of Triumphs
 				if (totalTriumphs > 0) {
 					rollText += totalTriumphs + " Triumphs ";
+					blank = 0;
 				}
+				// Output the number of Dispairs
 				if (totalDispairs < 0) {
 					rollText += Math.abs(totalDispairs) + " Dispairs ";
+					blank = 0;
 				}
+				// Output Special Dice (e.g., Force dice)
 				if (totalSpecial > 0) {
-					rollText += totalSpecial + " White"
+					rollText += totalSpecial + " White ";
+					blank = 0;
 				}
-				else if (totalSpecial < 0){
-					rollText += Math.abs(totalSpecial) + " Black"
+				else if (totalSpecial < 0) {
+					rollText += Math.abs(totalSpecial) + " Black ";
+					blank = 0;
 				}
-				if (rollText.length < 1)
-				{
-					rollText += "Blank"
+				// If no result output blank.
+				if (blank == 1) {
+						rollText = 'Blank';
 				}
 
 				document.getElementById("results").innerHTML += rollText + "<br />";
 			};
+			/**
+			 * Returns a random integer between min (inclusive) and max (inclusive)
+			 * Using Math.round() will give you a non-uniform distribution!
+			 */
+			function DieRoll(max) {
+					// Roll dice; subtract 1 from result to return array index
+					return Math.floor(Math.random() * max);
+			}
 
 			function clearRoll() {
 				document.getElementById("results").innerHTML = '';
